--- a/couchbase-connector/pom.xml
+++ b/couchbase-connector/pom.xml
@@ -74,7 +74,7 @@
                                     <type>${project.packaging}</type>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>${project.basedir}/../conf/lib</outputDirectory>
+                            <outputDirectory>${project.basedir}/../pre-cu/target/build/lib</outputDirectory>
                             <overWriteReleases>true</overWriteReleases>
                             <overWriteSnapshots>true</overWriteSnapshots>
                         </configuration>
